Fixed some spacing problems

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body {
 
 main {
 	flex: 1;
+	padding: 1em 0 0;
 }
 
 h1 {
